lustre/lfsck/lfsck_striped_dir.c
@@ -1605,16 +1605,23 @@ int lfsck_namespace_scan_shard(const struct lu_env *env,
 	while (rc == 0) {
 		if (OBD_FAIL_CHECK(OBD_FAIL_LFSCK_DELAY3) &&
 		    cfs_fail_val > 0) {
-			struct l_wait_info lwi;
+			unsigned int val = ACCESS_ONCE(cfs_fail_val);
 
-			lwi = LWI_TIMEOUT(cfs_time_seconds(cfs_fail_val),
-					  NULL, NULL);
-			l_wait_event(thread->t_ctl_waitq,
-				     !thread_is_running(thread),
-				     &lwi);
+			/* Some others may changed the cfs_fail_val as zero
+			 * after above check, re-check it for sure to avoid
+			 * falling into wait for ever. */
+			if (likely(val > 0)) {
+				struct l_wait_info lwi;
 
-			if (unlikely(!thread_is_running(thread)))
-				GOTO(out, rc = 0);
+				lwi = LWI_TIMEOUT(cfs_time_seconds(val),
+						  NULL, NULL);
+				l_wait_event(thread->t_ctl_waitq,
+					     !thread_is_running(thread),
+					     &lwi);
+
+				if (unlikely(!thread_is_running(thread)))
+					GOTO(out, rc = 0);
+			}
 		}
 
 		rc = iops->rec(env, di, (struct dt_rec *)ent, args);
